KLS: Setting level for npcs will now update their spawn level too.
KLS: Fix potential memory leak in item link code.
KLS: Changed resists a bit.
KLS: Added rule: Spells:ResistPerLevelDiff(85) 8.5 resist points per level diff
KLS: Added rule: Combat:BaseHitChance(54.0)
KLS: Added rule: Combat:HitPerLevelDiff(145) 45% per level diff
KLS: Added rule: Combat:AgiHitFactor(0.015)

==10/22/2008
AndMetal: Fix for item links to prevent occasional zone crashes
AndMetal: Critical DOTs should now work correctly
AndMetal: Fixed sql/svn/125_aggrozone.sql to work with current command table schema
AndMetal: (Theeper) Shared Bank platinum. Added rule Character:SharedBankPlat(false) to enable since it is possible to dupe plat with multiple characters logged in on the same account at the same time
AndMetal: Fixed a few random compile warnings
Angelox: Bot Tracking improves as levels increase.
Angelox: Druid Bot is now next best tracker
AndMetal: Support for +Stat Cap (Wunshi's Focusing, etc)
AndMetal: New rules for tweaking spell crits: Spells:BaseCritChance(0), Spells:BaseCritRatio(0), Spells:WizCritLevel(12), Spells:WizCritChance(7), Spells:WizCritRatio(15)
AndMetal: Loot messages will now have item links instead of just the item name

==10/21/2008
KLS: Some changes to make compiling with profiler enabled more error free.
KLS: Added player quest event EVENT_TASK_STAGE_COMPLETE exports $task_id and $activity_id.
KLS: Added player quest event EVENT_PICK_UP exports $picked_up_id for when a player picks up a ground spawn or dropped item.
KLS: Added quest::CreateGroundObject(itemid, x, y, z, heading) which lets the quest script create ground objects in the zone like if they had been dropped.
KLS: Objects should decay after they're loaded back into the world. Might want to backup your objects table till I can confirm this works 100%.
KLS: Lowered ground object decay time from 30 min to 5 min.

==10/20/2008